MediaRecoder: only throw exception from requestData() if state is inactive

Simple change to update to the Spec and FF implementation.

LayoutTest updated (note that we're still checking that requestData()
throws when the state==inactive).

BUG=673965

Review-Url: https://codereview.chromium.org/2571093002
Cr-Commit-Position: refs/heads/master@{#438407}

Former-commit-id: 29c40203a88f3e540ca1985d12dcd4de09a07317